test/Harper/Tests/Good/issue5_lam.har
fun = {
  f = (\b c x => b + c - x);
  return f;
};

main = fun 1 2 3;