test/Harper/Tests/Bad/issue5_unassignable.har
fun n = {
    x = n;
    y += 1;
    return x;
};

main = {
    fun := (\n => n);
    return fun;
};